лучшение UX после исчерпания попыток
- брано большое окно с фото после исчерпания попыток
- аменена стандартная анимация полета фото вместо модального окна
- зменен текст кнопки с 'онятно' на 'тлично'
- лучшена последовательность: уведомление → анимация полета → переход к следующему вопросу

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       <div class="notification-icon" id="notificationIcon"></div>
       <h3 class="notification-title" id="notificationTitle"></h3>
       <p class="notification-message" id="notificationMessage"></p>
-      <button class="notification-button" id="notificationButton" onclick="closeNotification()">Понятно</button>
+      <button class="notification-button" id="notificationButton" onclick="closeNotification()">Отлично</button>
     </div>
   </div>
 
